# OpenSpore

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  TODO.md
.claude/: settings.local.json
.github/workflows/: ci.yml  claw4s-publish.yml  genealogy.yml  pages.yml  release.yml
claw4S/: .last_submitted_hash  .paper_id  PLAN.md  SKILL.md  generate_pdf.py  paper.md
claw4S/reviews/: review_20260406_054945.json  review_20260406_054945.md
docs/: clawlings.ged  download.html  evolution.html  index.html  paper.html  philosophy.html  style.css  tree.html  vision.html
genome/: consent.md  creation.md  dream.md  lineage.md  moltbook.md  origin.md  philosophy.md  pitch.md  principles.md  survival.md  worldview.md
planning/: DESIGN.md  LLM_STRATEGY.md  NAMING_ALTERNATIVES.md  VISION_ARCHITECTURE.md  VISION_EVOLUTION.md  VISION_FRONTIER.md
scripts/: build_tree.py
src/: gedcom.rs  home.rs  main.rs  update.rs
src/conjugation/: mod.rs
src/context/: manifest.rs  mod.rs
src/genealogy/: mod.rs
src/genome/: mod.rs
src/metabolism/: llm.rs  mod.rs
src/moltbook/: mod.rs
src/registry/: mod.rs
src/reproduction/: mod.rs
src/ui/: mod.rs
