[package]
name = "clawling"
version = "0.1.0"
edition = "2024"
description = "The first digital organism — a consent-based, self-reproducing AI life form"
license = "MIT"

[[bin]]
name = "clawling"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zip = "2"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
reqwest = { version = "0.12", features = ["json"] }
dirs = "6"
